[package]
name = "gitignore"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.3", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "0.2.13", features = ["macros"] }
